--- a/api/package.json
+++ b/api/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mssql": "^9.1.3",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "type": "module"
 }
